--- a/main.html
+++ b/main.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption Application</title>
+
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form>
+        <h2>Dog Adoption Application</h2>
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Name" required>
 
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" name="phone" placeholder="Phone Number" required>
+
+        <label for="address">Address</label>
+        <input type="text" id="address" name="address" placeholder="Address" required>
+
+        <label>
+            <input type="checkbox" id="lived_with_dog" name="lived_with_dog" value="Have you ever lived with a Dog before?">
+            Have you ever lived with a Dog before?
+        </label>
+
+        <label for="preferred_breeds">Please select your preferred breeds</label>
+        <select id="preferred_breeds" name="preferred_breeds" multiple required>
+            <option value="labrador">Labrador</option>
+            <option value="german_shepherd">German Shepherd</option>
+            <option value="golden_retriever">Golden Retriever</option>
+            <option value="bulldog">Bulldog</option>
+            <option value="poodle">Poodle</option>
+        </select>
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
 
 </html>
