--- a/main.html
+++ b/main.html
@@ -21,12 +21,12 @@
         <input type="text" id="address" name="address" placeholder="Address" required>
 
         <label>
-            <input type="checkbox" id="lived_with_dog" name="lived_with_dog" value="Have you ever lived with a Dog before?">
+            <input type="checkbox" id="checkbox" name="lived_with_dog" value="Have you ever lived with a Dog before?">
             Have you ever lived with a Dog before?
         </label>
 
         <label for="preferred_breeds">Please select your preferred breeds</label>
-        <select id="preferred_breeds" name="preferred_breeds" multiple required>
+        <select id="multiSelect" name="preferred_breeds" multiple required>
             <option value="labrador">Labrador</option>
             <option value="german_shepherd">German Shepherd</option>
             <option value="golden_retriever">Golden Retriever</option>
@@ -34,7 +34,7 @@
             <option value="poodle">Poodle</option>
         </select>
 
-        <input type="submit" value="Submit">
+        <input type="submit" id="submit" value="Submit">
     </form>
 </body>
 
